--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,14 @@
 .App {
   text-align: center;
+  height: 100vh;
+  background-color: #041c32;
+  width: 100vw;
+  overflow: hidden;  display: flex;
+  justify-content: center;
+  align-items: center;
+  overflow-y: scroll;
 }
-a{
+a {
   text-decoration: none;
 }
 a {
